2006-02-08  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Leak.py (display): Catch exception coming from
	trying to call __repr__ on a closed db.DB.
	* src/gramps.glade: Correct +/- tooltips for Data tab in Source Editor.

2006-01-26  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/FamilyGroup.py: correctly put borders on the 
	children cells.

2006-02-05  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/ODFDoc.py: Correct typos.

2006-02-02  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (rebuild_secondary): properly rebuild
	secondary indices relying on BSD DB rather than manually re-adding
	every record.
	* src/plugins/Rebuild.py (__init__): Use fixed 7 progress steps
	for 1 removing step and 6 index rebuilds.

2006-01-26  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/ODFDoc.py (init): Correct name for parent style;
	Use handling program name obtained from the mime system.	

2006-01-25  Serge Noiraud  <Serge.Noiraud@free.fr>
	* src/docgen/ODFDoc.py: Add new document generator.
	* src/docgen/Makefile.am: Ship new file.
	* src/po/fr.po, src/po/template.po: Add new format's name.

2006-01-25  Kees Bakker  <kees.bakker@xs4all.nl>
	* src/po/nl.po: Translation update.

2006-01-25  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugings/FamiyGroup.py: options for "Recursive", "Generation
	Number", "Parent Events", "Parent Addresses", "Parent Alternate 
	Names", "Parent Notes".

2006-01-18  Brian Matherly  <pez4brian@yahoo.com>
	* src/plugins/DetDescendantReport.py: include spouse option

2006-01-16  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py
	(IsLessThanNthGenerationAncestorOfBookmarked): Typo.
	* src/EditPlace.py, src/EditSource.py, src/ImageSelect.py: Provide
	default value for the second argument on close().

2006-01-15  Don Allingham  <don@gramps-project.org>
	* src/RelLib.py: improve Event is_equal method

2006-01-11  Stefan Bjork  <skalman@acc.umu.se>