@@ -2,6 +2,8 @@
 	* src/plugins/Leak.py (display): Catch exception coming from
 	trying to call __repr__ on a closed db.DB.
 	* src/gramps.glade: Correct +/- tooltips for Data tab in Source Editor.
+	* src/WriteGedcom.py (write_source_ref): Write confidence level
+	(the QUAY tag) of the source reference into GEDCOM.
 
 2006-01-26  Brian Matherly  <pez4brian@users.sourceforge.net>
 	* src/plugins/FamilyGroup.py: correctly put borders on the 
